 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete

(Claudia Juergen)
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
 - [DS-231] Missig file (just some obsolete use of index-all in the current documentation, corrected the docs)

(Ricardo Saraiva)
 - [DS-190] Portuguese (pt_PT) translation Messages.properties JSP-UI v1.5.2

(Stuart Lewis)
 - [DS-161] Bulk metadata editing
 - [DS-194] Give METS ingester configuration option to make use of collection templates
 - [DS-195] Allow the primary bitstream to be set in the item importer / exporter
 - [DS-196] METS exposed via OAI-PMH includes description.provenance information
 - [DS-200] SWORD module requires the X-Packaging header
 - [DS-204] New -zip option for item exporter and importer
 - [DS-209] Context.java turnOffAuthorisationSystem() can throw a NPE
 - [DS-212] NPE thrown during Harvest of non-items when visibility restriction is enabled
 - [DS-213] IPAuthentication extended to allow negative matching
 - [DS-216] Migrating items that use additional metadata schemas causes an NPE
 - [DS-219] Internal Server error - include login details of user
 - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
 - [DS-242] Special groups shown for logged in user rather than for user being examined

(Larry Stone)
 - [DS-193] OAI RDF crosswalk fails when DC value is null

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Andrea Bollini)
 - [DS-206] Input form visibility restriction doesn't work properly
 - [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
 - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
 - [DS-227] Values with double apos doesn't work in dropdown and list input type

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI