@@ -11,7 +11,8 @@
 (Claudia Juergen)
  - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
  - [DS-231] Missig file (just some obsolete use of index-all in the current documentation, corrected the docs)
-
+ - [DS-248] Missing admin column in community table in database-schema.sql and update - community admin patch
+ 
 (Ricardo Saraiva)
  - [DS-190] Portuguese (pt_PT) translation Messages.properties JSP-UI v1.5.2
 
